@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 2013 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013-2015 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -41,6 +41,7 @@
 package com.sun.mail.iap;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertArrayEquals;
 import org.junit.Test;
 
 /**
@@ -95,5 +96,24 @@ public class ResponseTest {
     public void testAStringSpecial() throws Exception {
 	Response r = new Response("* " + "atom] ");
 	assertEquals("atom]", r.readAtomString());
+    }
+
+    /**
+     * Test astring lists.
+     */
+    @Test
+    public void testAStringList() throws Exception {
+	Response r = new Response("* " + "(A B \"C\")");
+	assertArrayEquals(new String[] { "A", "B", "C" },
+			    r.readAtomStringList());
+    }
+
+    /**
+     * Test empty astring lists.
+     */
+    @Test
+    public void testAStringListEmpty() throws Exception {
+	Response r = new Response("* " + "()");
+	assertArrayEquals(new String[0], r.readAtomStringList());
     }
 }
